# radio

./: .env.compose  .env.tests.player  .gitignore  LICENSE  README.md  docker-compose.tests.yaml  docker-compose.yaml
backend/: .dockerignore  Dockerfile  config.schema.json  config.yaml  initialize.py  pyproject.toml  requirements.txt
backend/src/: .flake8  app.py  boostrap.py  config.py  dbinit.py  dbuse.py  pyproject.toml
backend/src/building_blocks/: clock.py  errors.py
backend/src/tests/: __init__.py  bootstrap.py  choices.py  conftest.py  inmemory_youtube_api.py
backend/src/tests/fixtures/: reset.py
backend/src/tests/helpers/: dt.py  messaging.py
backend/src/tests/infra/: data.py  test_library_repository.py  test_playlist_repository.py
backend/src/tests/unit/: bootstrap.py  data.py  test_breaks.py  test_duration.py  test_events_exchange.py  test_library.py  test_library_repository.py  test_playlist.py  test_playlist_repository.py  test_provider_youtube.py  test_requests.py  test_track_builder.py
backend/src/track/: __init__.py  boostrap.py  builder.py
backend/src/track/application/: dto.py  errors.py  library.py  playlist.py  requests_service.py
backend/src/track/controllers/: json_encoder.py  library.py  playlist.py
backend/src/track/domain/: breaks.py  duration.py  entities.py  errors.py  events_base.py  library_repository.py  playlist_repository.py  provided.py  status.py  track.py
backend/src/track/infrastructure/: config.py  (+7 more)
backend/tests/: youtube_api.py
backend/tests/unit/: __init__.py  test_provider_youtube.py  test_track_builder.py
(+94 files in other folders)
